# py2c

./: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  table_of_contents.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/py2c/: c_to_py_code.html  py_to_c_code.html
_sources/: table_of_contents.rst.txt
_sources/module_docs/: py2c.rst.txt
_sources/module_docs/py2c/: c_to_py_code.rst.txt  py_to_c_code.rst.txt
docsrc/: index.rst
module_docs/: py2c.html
module_docs/py2c/: c_to_py_code.html  py_to_c_code.html
