[metadata]
version = 0.0.1
description = Tools to bridge python and C
license = mit
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = py2c
display_name = py2c

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
		

